objects/Client_Plan_Facility__c.object
<CustomObject>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Level 3</label>
        <referenceTo>Product_Level_3__c</referenceTo>
        <relationshipLabel>Client Plan Facilities</relationshipLabel>
        <relationshipName>Client_Plan_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Plan Facilities</relationshipLabel>
        <relationshipName>Client_Plan_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_Of_Facility__c</fullName>
        <label>Type Of Facility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABSA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utilisation__c</fullName>
        <label>Utilisation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Client Plan Facility</label>
    <nameField>
        <displayFormat>CPF-{000000}</displayFormat>
        <label>Client Plan  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Plan Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>